[package]
name = "thread-proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
hyper = { version = "1.6.0", features = ["full"] }
socket2 = { git = "https://github.com/rust-lang/socket2" }
tokio = { version = "1.21", features = ["full"] }
http-body-util = "0.1.3"
bytes = "1.10.1"
hyper-util = {version = "0.1.15", features = ["full"] }
clap = { version = "4.5.41", features = ["derive"] }